# 20260428

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/plans/: commercial_protection_scheme_c5852b52.plan.md  工厂收支周期统计_f585e13e.plan.md  线材库存模块设计_1329dc10.plan.md  绣花厂订单系统开发_d53937ff.plan.md
.cursor/rules/: architecture.mdc  coding-standards.mdc  database.mdc  project.mdc  security.mdc  troubleshooting.mdc  ui-patterns.mdc
__tests__/: business.test.ts  factoryOverview.test.ts  payments.test.ts  smoke.test.ts  utils.test.ts  wages.test.ts
docs/: 用户使用手册.md
e2e/: customers.spec.ts  finance.spec.ts  fixtures.ts  navigation.spec.ts  orders.spec.ts  settings.spec.ts  tauri-mock.js  threads.spec.ts  workers.spec.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_core_tables.sql  002_threads.sql
src-tauri/src/: database.rs  lib.rs  license.rs  main.rs
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/shared/: LicenseGate.tsx  (+2 more)
src/hooks/: useAppStartup.ts  useBackupReminder.ts  useCustomers.ts  useFactoryOverview.ts  useMachines.ts  useOrders.ts  usePayments.ts  useProduction.ts  useSettingsPageData.ts  useStatement.ts  useThreads.ts  useWorkers.ts
src/lib/: backup.ts  business.ts  db.ts  export.ts  schema.ts  utils.ts
src/pages/: Settings.tsx
src/styles/: globals.css
src/types/: index.ts
(+29 files in other folders)
