[package]
name = "xiuhua"
version = "0.1.0"
edition = "2021"

[lib]
name = "xiuhua_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "license_tool"
path = "src/bin/license_tool.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rusqlite = { version = "0.39", features = ["bundled"] }
aes-gcm = "0.10"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
